@@ -1,4 +1,5 @@
 0.14
+ - Add 'onchange' parameter to Select.
 
 0.13 2024-04-12T00:54:37+02:00
  - Fix DEPENDENCIES section in Input doc.
